linux/windows driver update

--- a/com.DigitalTwin/test-output/old/MyTestSuite/methods.html
+++ b/com.DigitalTwin/test-output/old/MyTestSuite/methods.html
@@ -1,26 +1,40 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>MyTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f887b3">  <td>24/06/06 11:12:54</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Runner.setUp()[pri:0, instance:com.runner.Login_Runner@4b8d604b]">&gt;&gt;setUp</td> 
+<tr bgcolor="f887b3">  <td>24/06/06 12:35:37</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Runner.setUp()[pri:0, instance:com.runner.Login_Runner@4b8d604b]">&gt;&gt;setUp</td> 
 <td>&nbsp;</td>  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/06 11:12:59</td>   <td>4607</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Runner.loginUser()[pri:0, instance:com.runner.Login_Runner@4b8d604b]">loginUser</td> 
+<tr bgcolor="f887b3">  <td>24/06/06 12:35:43</td>   <td>6058</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Runner.loginUser()[pri:0, instance:com.runner.Login_Runner@4b8d604b]">loginUser</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:13:05</td>   <td>10589</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:35:48</td>   <td>11708</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:13:36</td>   <td>41491</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:36:19</td>   <td>42888</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:14:07</td>   <td>72329</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:36:31</td>   <td>54049</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:14:37</td>   <td>103047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchCustomer()[pri:1, instance:com.runner.userList_Runner@5e7cd6cc]">searchCustomer</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:36:42</td>   <td>65180</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchCustomer()[pri:1, instance:com.runner.userList_Runner@5e7cd6cc]">searchCustomer</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:14:44</td>   <td>109454</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDatascientist()[pri:2, instance:com.runner.userList_Runner@5e7cd6cc]">searchDatascientist</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:36:48</td>   <td>71396</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDatascientist()[pri:2, instance:com.runner.userList_Runner@5e7cd6cc]">searchDatascientist</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:14:44</td>   <td>109470</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDeveloper()[pri:3, instance:com.runner.userList_Runner@5e7cd6cc]">searchDeveloper</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:36:57</td>   <td>80781</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDeveloper()[pri:3, instance:com.runner.userList_Runner@5e7cd6cc]">searchDeveloper</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:14:50</td>   <td>115643</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteCustomer()[pri:4, instance:com.runner.userList_Runner@5e7cd6cc]">deleteCustomer</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:37:12</td>   <td>95393</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteCustomer()[pri:4, instance:com.runner.userList_Runner@5e7cd6cc]">deleteCustomer</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:14:56</td>   <td>121885</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDatascientist()[pri:5, instance:com.runner.userList_Runner@5e7cd6cc]">deleteDatascientist</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:37:25</td>   <td>108439</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDatascientist()[pri:5, instance:com.runner.userList_Runner@5e7cd6cc]">deleteDatascientist</td> 
   <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/06 11:15:02</td>   <td>128025</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDeveloper()[pri:6, instance:com.runner.userList_Runner@5e7cd6cc]">deleteDeveloper</td> 
+<tr bgcolor="8b6582">  <td>24/06/06 12:37:38</td>   <td>121102</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDeveloper()[pri:6, instance:com.runner.userList_Runner@5e7cd6cc]">deleteDeveloper</td> 
+  <td>main@1161322357</td>   <td></td> </tr>
+<tr bgcolor="becd9f">  <td>24/06/06 12:37:53</td>   <td>136007</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="viewProfile_Runner.clickChangePassword()[pri:0, instance:com.runner.viewProfile_Runner@68c9d179]">clickChangePassword</td> 
+  <td>main@1161322357</td>   <td></td> </tr>
+<tr bgcolor="becd9f">  <td>24/06/06 12:37:55</td>   <td>138091</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="viewProfile_Runner.changePassword()[pri:1, instance:com.runner.viewProfile_Runner@68c9d179]">changePassword</td> 
+  <td>main@1161322357</td>   <td></td> </tr>
+<tr bgcolor="becd9f">  <td>24/06/06 12:37:57</td>   <td>140917</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="viewProfile_Runner.checkLogin()[pri:2, instance:com.runner.viewProfile_Runner@68c9d179]">checkLogin</td> 
+  <td>main@1161322357</td>   <td></td> </tr>
+<tr bgcolor="becd9f">  <td>24/06/06 12:38:03</td>   <td>146489</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="viewProfile_Runner.logOut()[pri:3, instance:com.runner.viewProfile_Runner@68c9d179]">logOut</td> 
+  <td>main@1161322357</td>   <td></td> </tr>
+<tr bgcolor="a3b478">  <td>24/06/06 12:38:06</td>   <td>149727</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerLogin_Runner.setUp()[pri:0, instance:com.runner.CustomerLogin_Runner@33ecda92]">setUp</td> 
+  <td>main@1161322357</td>   <td></td> </tr>
+<tr bgcolor="a3b478">  <td>24/06/06 12:38:14</td>   <td>157023</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerLogin_Runner.loginCustomer()[pri:1, instance:com.runner.CustomerLogin_Runner@33ecda92]">loginCustomer</td> 
+  <td>main@1161322357</td>   <td></td> </tr>
+<tr bgcolor="cbafc2">  <td>24/06/06 12:38:23</td>   <td>166705</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="CustomerDashboard_Runner.uploadDataset()[pri:0, instance:com.runner.CustomerDashboard_Runner@6e2829c7]">uploadDataset</td> 
   <td>main@1161322357</td>   <td></td> </tr>
 </table>
