--- a/com.DigitalTwin/test-output/old/Default suite/methods.html
+++ b/com.DigitalTwin/test-output/old/Default suite/methods.html
@@ -1,22 +1,8 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:02:52</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@740fb309]">createUser</td> 
-  <td>main@757708014</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:03:02</td>   <td>10067</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@740fb309]">createUser</td> 
-  <td>main@757708014</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:03:12</td>   <td>20078</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@740fb309]">createUser</td> 
-  <td>main@757708014</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:03:22</td>   <td>30087</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchCustomer()[pri:1, instance:com.runner.userList_Runner@740fb309]">searchCustomer</td> 
-  <td>main@757708014</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:03:27</td>   <td>35097</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDatascientist()[pri:2, instance:com.runner.userList_Runner@740fb309]">searchDatascientist</td> 
-  <td>main@757708014</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:03:32</td>   <td>40116</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDeveloper()[pri:3, instance:com.runner.userList_Runner@740fb309]">searchDeveloper</td> 
-  <td>main@757708014</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:03:37</td>   <td>45126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteCustomer()[pri:4, instance:com.runner.userList_Runner@740fb309]">deleteCustomer</td> 
-  <td>main@757708014</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:03:42</td>   <td>50147</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDatascientist()[pri:5, instance:com.runner.userList_Runner@740fb309]">deleteDatascientist</td> 
-  <td>main@757708014</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/04 16:03:47</td>   <td>55154</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDeveloper()[pri:6, instance:com.runner.userList_Runner@740fb309]">deleteDeveloper</td> 
-  <td>main@757708014</td>   <td></td> </tr>
+<tr bgcolor="f887b3">  <td>24/06/07 00:20:17</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Runner.setUp()[pri:0, instance:com.runner.Login_Runner@3cce5371]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@530486389</td>   <td></td> </tr>
+<tr bgcolor="f887b3">  <td>24/06/07 00:20:21</td>   <td>4106</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Runner.loginUser()[pri:0, instance:com.runner.Login_Runner@3cce5371]">loginUser</td> 
+  <td>main@530486389</td>   <td></td> </tr>
 </table>
