switch password, delay updated

--- a/com.DigitalTwin/test-output/old/Default suite/classes.html
+++ b/com.DigitalTwin/test-output/old/Default suite/classes.html
@@ -4,14 +4,38 @@
 <th>Method name</th>
 <th>Groups</th>
 </tr><tr>
-<td>com.runner.Login_Runner</td>
+<td>com.runner.userList_Runner</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@Test</td>
 </tr>
 <tr>
 <td>&nbsp;</td>
-<td>loginUser</td>
+<td>searchDatascientist</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteCustomer</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchCustomer</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteDatascientist</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>createUser</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>searchDeveloper</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>deleteDeveloper</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td align='center' colspan='3'>@BeforeClass</td>
@@ -20,9 +44,39 @@
 <td align='center' colspan='3'>@BeforeMethod</td>
 </tr>
 <tr>
+<td align='center' colspan='3'>@AfterMethod</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@AfterClass</td>
+</tr>
+<tr>
+<td>com.runner.viewProfile_Runner</td>
+<td>&nbsp;</td><td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@Test</td>
+</tr>
+<tr>
 <td>&nbsp;</td>
-<td>setUp</td>
+<td>clickChangePassword</td>
 <td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>checkLogin</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>logOut</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>changePassword</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td align='center' colspan='3'>@BeforeClass</td>
+</tr>
+<tr>
+<td align='center' colspan='3'>@BeforeMethod</td>
+</tr>
 <tr>
 <td align='center' colspan='3'>@AfterMethod</td>
 </tr>
