--- a/com.DigitalTwin/test-output/old/MyTestSuite/methods-alphabetical.html
+++ b/com.DigitalTwin/test-output/old/MyTestSuite/methods-alphabetical.html
@@ -1,26 +1,26 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>MyTestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:22:55</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:23:26</td>   <td>30598</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:23:37</td>   <td>41654</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@5e7cd6cc]">createUser</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:24:09</td>   <td>74246</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteCustomer()[pri:4, instance:com.runner.userList_Runner@5e7cd6cc]">deleteCustomer</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:24:16</td>   <td>80451</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDatascientist()[pri:5, instance:com.runner.userList_Runner@5e7cd6cc]">deleteDatascientist</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:24:22</td>   <td>86560</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDeveloper()[pri:6, instance:com.runner.userList_Runner@5e7cd6cc]">deleteDeveloper</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/07 08:22:49</td>   <td>-5830</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Runner.loginUser()[pri:0, instance:com.runner.Login_Runner@4b8d604b]">loginUser</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:23:48</td>   <td>52744</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchCustomer()[pri:1, instance:com.runner.userList_Runner@5e7cd6cc]">searchCustomer</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:24:02</td>   <td>66964</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDatascientist()[pri:2, instance:com.runner.userList_Runner@5e7cd6cc]">searchDatascientist</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="8b6582">  <td>24/06/07 08:24:03</td>   <td>68142</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDeveloper()[pri:3, instance:com.runner.userList_Runner@5e7cd6cc]">searchDeveloper</td> 
-  <td>main@1161322357</td>   <td></td> </tr>
-<tr bgcolor="f887b3">  <td>24/06/07 08:22:46</td>   <td>-9068</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Runner.setUp()[pri:0, instance:com.runner.Login_Runner@4b8d604b]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@1161322357</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:50:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@60f00693]">createUser</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:50:35</td>   <td>20126</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@60f00693]">createUser</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:50:45</td>   <td>30148</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@60f00693]">createUser</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:51:05</td>   <td>50210</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteCustomer()[pri:4, instance:com.runner.userList_Runner@60f00693]">deleteCustomer</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:51:10</td>   <td>55229</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDatascientist()[pri:5, instance:com.runner.userList_Runner@60f00693]">deleteDatascientist</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:51:15</td>   <td>60249</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDeveloper()[pri:6, instance:com.runner.userList_Runner@60f00693]">deleteDeveloper</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="66bd67">  <td>24/06/11 14:50:09</td>   <td>-5838</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Runner.loginUser()[pri:0, instance:com.runner.Login_Runner@50378a4]">loginUser</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:50:55</td>   <td>40156</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchCustomer()[pri:1, instance:com.runner.userList_Runner@60f00693]">searchCustomer</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:51:00</td>   <td>45174</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDatascientist()[pri:2, instance:com.runner.userList_Runner@60f00693]">searchDatascientist</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/11 14:51:00</td>   <td>45183</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDeveloper()[pri:3, instance:com.runner.userList_Runner@60f00693]">searchDeveloper</td> 
+  <td>main@823914581</td>   <td></td> </tr>
+<tr bgcolor="66bd67">  <td>24/06/11 14:50:06</td>   <td>-9494</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Runner.setUp()[pri:0, instance:com.runner.Login_Runner@50378a4]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@823914581</td>   <td></td> </tr>
 </table>
