--- a/com.DigitalTwin/test-output/old/index.html
+++ b/com.DigitalTwin/test-output/old/index.html
@@ -4,6 +4,6 @@
 </head><body>
 <h2><p align='center'>Test results</p></h2>
 <table border='1' width='100%' class='main-page'><tr><th>Suite</th><th>Passed</th><th>Failed</th><th>Skipped</th><th>testng.xml</th></tr>
-<tr align='center' class='invocation-failed'><td><em>Total</em></td><td><em>3</em></td><td><em>7</em></td><td><em>11</em></td><td>&nbsp;</td></tr>
-<tr align='center' class='invocation-failed'><td><a href='MyTestSuite/index.html'>MyTestSuite</a></td>
-<td>3</td><td>7</td><td>11</td><td><a href='MyTestSuite/testng.xml.html'>Link</a></td></tr></table></body></html>
+<tr align='center' class='invocation-failed'><td><em>Total</em></td><td><em>1</em></td><td><em>9</em></td><td><em>11</em></td><td>&nbsp;</td></tr>
+<tr align='center' class='invocation-failed'><td><a href='DT-TestSuite/index.html'>DT-TestSuite</a></td>
+<td>1</td><td>9</td><td>11</td><td><a href='DT-TestSuite/testng.xml.html'>Link</a></td></tr></table></body></html>
