Login Runner update

--- a/com.DigitalTwin/test-output/old/DT-TestSuite/methods.html
+++ b/com.DigitalTwin/test-output/old/DT-TestSuite/methods.html
@@ -1,28 +1,34 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>DT-TestSuite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="66bd67">  <td>24/06/14 12:36:09</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Runner.setUp()[pri:0, instance:com.runner.Login_Runner@79207381]">&gt;&gt;setUp</td> 
-<td>&nbsp;</td>  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="66bd67">  <td>24/06/14 12:36:12</td>   <td>2741</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Runner.loginUser()[pri:0, instance:com.runner.Login_Runner@79207381]">loginUser</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:36:18</td>   <td>8618</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@491b9b8]">createUser</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:36:28</td>   <td>18659</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@491b9b8]">createUser</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:36:38</td>   <td>28687</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@491b9b8]">createUser</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:36:48</td>   <td>38711</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchCustomer()[pri:1, instance:com.runner.userList_Runner@491b9b8]">searchCustomer</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:36:53</td>   <td>43740</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDatascientist()[pri:2, instance:com.runner.userList_Runner@491b9b8]">searchDatascientist</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:36:53</td>   <td>43754</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDeveloper()[pri:3, instance:com.runner.userList_Runner@491b9b8]">searchDeveloper</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:36:58</td>   <td>48773</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteCustomer()[pri:4, instance:com.runner.userList_Runner@491b9b8]">deleteCustomer</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:37:03</td>   <td>53784</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDatascientist()[pri:5, instance:com.runner.userList_Runner@491b9b8]">deleteDatascientist</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/14 12:37:08</td>   <td>58800</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDeveloper()[pri:6, instance:com.runner.userList_Runner@491b9b8]">deleteDeveloper</td> 
-  <td>main@2100440237</td>   <td></td> </tr>
-<tr bgcolor="b980df">  <td>24/06/14 12:37:13</td>   <td>63844</td> <td>&nbsp;</td><td title="&lt;&lt;Customer_View_Profile_Runner.endTest()[pri:0, instance:com.runner.Customer_View_Profile_Runner@6b09fb41]">&lt;&lt;endTest</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@2100440237</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/26 15:45:57</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Runner.setUp()[pri:0, instance:com.runner.Login_Runner@821330f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/26 15:46:04</td>   <td>6953</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Runner.loginUser(java.lang.String, java.lang.String)[pri:0, instance:com.runner.Login_Runner@821330f]">loginUser</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/26 15:46:26</td>   <td>28763</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;Login_Runner.setUp()[pri:0, instance:com.runner.Login_Runner@821330f]">&gt;&gt;setUp</td> 
+<td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="bab877">  <td>24/06/26 15:46:31</td>   <td>33951</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Login_Runner.loginUser(java.lang.String, java.lang.String)[pri:0, instance:com.runner.Login_Runner@821330f]">loginUser</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:46:33</td>   <td>36216</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@6f43c82]">createUser</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:46:44</td>   <td>46233</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@6f43c82]">createUser</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:46:54</td>   <td>56251</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@6f43c82]">createUser</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:47:04</td>   <td>66266</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchCustomer()[pri:1, instance:com.runner.userList_Runner@6f43c82]">searchCustomer</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:47:04</td>   <td>66274</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDatascientist()[pri:2, instance:com.runner.userList_Runner@6f43c82]">searchDatascientist</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:47:04</td>   <td>66280</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDeveloper()[pri:3, instance:com.runner.userList_Runner@6f43c82]">searchDeveloper</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:47:04</td>   <td>66285</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteCustomer()[pri:4, instance:com.runner.userList_Runner@6f43c82]">deleteCustomer</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:47:06</td>   <td>68305</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDatascientist()[pri:5, instance:com.runner.userList_Runner@6f43c82]">deleteDatascientist</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="a37671">  <td>24/06/26 15:47:08</td>   <td>70313</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDeveloper()[pri:6, instance:com.runner.userList_Runner@6f43c82]">deleteDeveloper</td> 
+  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="6aac89">  <td>24/06/26 15:47:10</td>   <td>72335</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;viewProfile_Runner.adminEnd()[pri:0, instance:com.runner.viewProfile_Runner@5db6b9cd]">&lt;&lt;adminEnd</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
+<tr bgcolor="e4c792">  <td>24/06/26 15:47:10</td>   <td>72350</td> <td>&nbsp;</td><td title="&lt;&lt;Customer_View_Profile_Runner.endTest()[pri:0, instance:com.runner.Customer_View_Profile_Runner@58e1d9d]">&lt;&lt;endTest</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@263053820</td>   <td></td> </tr>
 </table>
