--- a/com.DigitalTwin/test-output/old/DT-TestSuite/classes.html
+++ b/com.DigitalTwin/test-output/old/DT-TestSuite/classes.html
@@ -19,19 +19,19 @@
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>deleteDatascientist</td>
-<td>&nbsp;</td></tr>
-<tr>
-<td>&nbsp;</td>
 <td>searchCustomer</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
-<td>createUser</td>
+<td>deleteDatascientist</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
 <td>searchDeveloper</td>
+<td>&nbsp;</td></tr>
+<tr>
+<td>&nbsp;</td>
+<td>createUser</td>
 <td>&nbsp;</td></tr>
 <tr>
 <td>&nbsp;</td>
@@ -83,6 +83,10 @@
 <tr>
 <td align='center' colspan='3'>@AfterClass</td>
 </tr>
+<tr>
+<td>&nbsp;</td>
+<td>adminEnd</td>
+<td>&nbsp;</td></tr>
 <tr>
 <td>com.runner.Customer_View_Profile_Runner</td>
 <td>&nbsp;</td><td>&nbsp;</td></tr>
