--- a/com.DigitalTwin/test-output/old/Default suite/methods.html
+++ b/com.DigitalTwin/test-output/old/Default suite/methods.html
@@ -1,22 +1,6 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:47:15</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@68c9d179]">createUser</td> 
-  <td>main@573958827</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:47:25</td>   <td>10047</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@68c9d179]">createUser</td> 
-  <td>main@573958827</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:47:35</td>   <td>20051</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.createUser(java.lang.String, java.lang.String, java.lang.String, java.lang.String)[pri:0, instance:com.runner.userList_Runner@68c9d179]">createUser</td> 
-  <td>main@573958827</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:47:45</td>   <td>30069</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchCustomer()[pri:1, instance:com.runner.userList_Runner@68c9d179]">searchCustomer</td> 
-  <td>main@573958827</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:47:50</td>   <td>35073</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDatascientist()[pri:2, instance:com.runner.userList_Runner@68c9d179]">searchDatascientist</td> 
-  <td>main@573958827</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:47:50</td>   <td>35086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.searchDeveloper()[pri:3, instance:com.runner.userList_Runner@68c9d179]">searchDeveloper</td> 
-  <td>main@573958827</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:47:55</td>   <td>40089</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteCustomer()[pri:4, instance:com.runner.userList_Runner@68c9d179]">deleteCustomer</td> 
-  <td>main@573958827</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:48:00</td>   <td>45099</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDatascientist()[pri:5, instance:com.runner.userList_Runner@68c9d179]">deleteDatascientist</td> 
-  <td>main@573958827</td>   <td></td> </tr>
-<tr bgcolor="bab877">  <td>24/06/13 14:48:05</td>   <td>50109</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="userList_Runner.deleteDeveloper()[pri:6, instance:com.runner.userList_Runner@68c9d179]">deleteDeveloper</td> 
-  <td>main@573958827</td>   <td></td> </tr>
+<tr bgcolor="66bd67">  <td>24/06/23 13:25:34</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;Login_Runner.loginEnd()[pri:0, instance:com.runner.Login_Runner@d554c5f]">&lt;&lt;loginEnd</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1179792105</td>   <td></td> </tr>
 </table>
